Fix: branch name for CI

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 'master'
+      - 'main'
 
 env:
   APP_IMAGE_NAME: deepsick/devops-for-programmers-project-lvl1
