--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 version: "3.3"
 
-services: 
+services:
+  db:
+    image: postgres
+    restart: always
+    env_file: 
+      - .env
+    environment: 
+      POSTGRES_PASSWORD: NODOS_DB_PASSWORD
+      POSTGRES_USER: NODOS_DB_USERNAME
   app:
     build: .
+    depends_on: 
+      - db
