--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     env_file: 
       - .env
     environment: 
-      POSTGRES_PASSWORD: NODOS_DB_PASSWORD
-      POSTGRES_USER: NODOS_DB_USERNAME
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
   app:
     build: .
     depends_on: 
