--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: "3.3"
 
 services:
   db:
-    image: postgres
+    container_name: db
+    image: postgres:13.3
     env_file: 
       - .env
     environment: 
       POSTGRES_PASSWORD: ${NODOS_DB_PASSWORD}
       POSTGRES_USER: ${NODOS_DB_USERNAME}
   app:
+    container_name: app
     build: 
       context: .
       dockerfile: Dockerfile.production
