--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-# Env Variabables
+HOST=0.0.0.0
+PORT=8080
+DATABASE_PORT=5432
+DATABASE_HOST=db
+DATABASE_NAME=postgres
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
