--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,23 +20,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      
-      - name: Install deps
-        run: |
-          npm install
-        env:
-          CI: true
-
-      - name: Run tests
-        run: |
-          npm test
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+
+      - name: run tests
+        working-directory: .
+        run: make ci
       
       - name: Login to DockerHub
         uses: docker/login-action@v1
