--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,11 +1,11 @@
 FROM node:14.6
 WORKDIR /app
 
-COPY package.json package.json
-COPY package-lock.json package-lock.json
+COPY ./app/package.json package.json
+COPY ./app/package-lock.json package-lock.json
 
 RUN npm install
 
-COPY . .
+COPY ./app .
 
-CMD npm start
+EXPOSE 8080
