--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -9,7 +9,7 @@ services:
       - 8080:8080
     volumes:
       - .:/app
-    command: npx nodos server -h 0.0.0.0
+    command: npm start
 
   caddy:
     image: caddy:2.3.0
