--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,10 @@ services:
   db:
     container_name: db
     image: postgres:13.3
-    env_file: 
-      - .env
+    restart: always
     environment: 
-      POSTGRES_PASSWORD: ${NODOS_DB_PASSWORD}
-      POSTGRES_USER: ${NODOS_DB_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_USER: ${DATABASE_USERNAME}
   app:
     container_name: app
     build: 
@@ -17,4 +16,3 @@ services:
     depends_on: 
       - db
     command: npm test
-        
